Adding PRSR page layout

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -9,12 +9,12 @@
             <li class="<%= path == '/addressChange' ? 'active' : '' %>"><a href="/addressChange">Address Change Portal</a></li>
             <li class="<%= path == '/iro' ? 'active' : '' %>"><a href="/iro">Independent Review Portal</a></li>
             <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <li class="<%= path == '/auditdoc' ? 'active' : '' %>"><a href="/auditdoc">Audit Document Submission Portal</a></li>
+            <li class="<%= path == '/surpluslines' ? 'active' : '' %>"><a href="/surpluslines">Surplus Lines Portal</a></li>
+            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
+            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
+            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
+            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
             <li><a href="#">Link</a></li>
         </ul>
     </div><!--/.well -->
