--- a/views/header.html
+++ b/views/header.html
@@ -18,11 +18,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Project name</a>
+                    <a class="brand" href="#">Steve's Toolbox</a>
                     <div class="nav-collapse collapse">
-                        <p class="navbar-text pull-right">
+<!--                        <p class="navbar-text pull-right">
                             Logged in as <a href="#" class="navbar-link">Username</a>
-                        </p>
+                        </p>-->
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
