--- a/views/prsr.html
+++ b/views/prsr.html
@@ -1,5 +1,13 @@
 <% include header.html %>
 <div class="span9">
-    
+    <div class='span6'>
+        <h3>Input</h3>
+        <textarea class='span12' id='input' rows='30'></textarea>
+        <button id='gotime' class='btn btn-large btn-success'>GO TIME!</button>
+    </div>
+    <div class='span6'>
+        <h3>Output</h3>
+        <textarea class='span12' id='output' rows='30'></textarea>
+    </div>
 </div>
 <% include footer.html %>
