Removing extra fil doc portal links

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -11,10 +11,7 @@
             <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
             <li class="<%= path == '/auditdoc' ? 'active' : '' %>"><a href="/auditdoc">Audit Document Submission Portal</a></li>
             <li class="<%= path == '/surpluslines' ? 'active' : '' %>"><a href="/surpluslines">Surplus Lines Portal</a></li>
-            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
-            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
-            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
-            <li class="<%= path == '/docsub' ? 'active' : '' %>"><a href="/docsub">Filing Document Submission Portal</a></li>
+            <li class="<%= path == '/umrefund' ? 'active' : '' %>"><a href="/umrefund">U.M. Refund Portal</a></li>
             <li><a href="#">Link</a></li>
         </ul>
     </div><!--/.well -->
